mds: directly return just after responding the link request

Fixes: https://tracker.ceph.com/issues/53750
Signed-off-by: Xiubo Li <xiubli@redhat.com>
(cherry picked from commit 14f9840dbf5ad288ae71af3311e3283f8f3964a6)

 Conflicts:
	src/mds/Server.cc
 - There is no CEPHFS_ENOENT in octopus.